syntax = "proto3";

option csharp_namespace = "GrpcModelPage";

package greet;

// The greeting service definition.
service Greeter {
  // Sends a greeting
  rpc SayHello (HelloRequest) returns (HelloReply);

  rpc GetMake (GrpcInt) returns (MakeResponse);
  rpc GetModel (GrpcInt) returns (ModelResponse);
  rpc GetImage (GrpcInt) returns (ImageResponse);
  rpc GetReview (GrpcInt) returns (ReviewResponse);

  rpc GetVersionList (GrpcInt) returns (VersionListResponse);
  rpc GetDefaultVersionByModelId (GrpcInt) returns (VersionResponse);
  rpc GetAllCities (EmptyParam) returns (CityListResponse);
  rpc GetPriceListByCityId (GrpcInt) returns (PriceListResponse);
  rpc GetAvgPriceByVersionId (GrpcInt) returns (GrpcString);

  rpc GetEmi (GrpcInt) returns (EmiResponse);
  rpc GetPriceDetails (GrpcInt) returns (PriceDetailsListResponse);
}

 // Response

message MakeResponse {
  int32 id = 1;
  string name = 2;
}

message ModelResponse {
  int32 id = 1;
  string name = 2;
}

message ImageResponse {
  int32 id = 1;
  int32 modelId = 2;
  string imageUrl = 3;
}

message ReviewResponse {
  int32 modelId = 1;
  double rating = 2;
  int32 count = 3;
}

message VersionListResponse {
  repeated VersionResponse version = 1;
}

message VersionResponse {
  int32 id = 1;
  int32 modelId = 2;
  string name = 3;
}

message CityListResponse {
  repeated CityResponse city = 1;
}

message CityResponse {
  int32 id = 1;
  string name = 2;
}

message PriceListResponse {
  repeated PriceResponse price = 1;
}

message PriceResponse {
  int32 id = 1;
  int32 versionId = 2;
  int32 cityId = 3;
  string value = 4;
}


message EmiResponse {
  int32 id = 1;
  int32 modelId = 2;
  string cost = 3;
  string duration = 4;
}

message CityList {
  repeated GrpcString cities = 1;
}

message VersionList {
  repeated GrpcString versions = 1;
}

message PriceDetailsListResponse {
  repeated PriceDetailsResponse priceDetails = 1;
}

message GrpcString {
  string value = 1;
}

message PriceDetailsResponse {
  string price = 1;
  string version = 2;
  string city = 3;
}

// The request message containing the user's name.
message HelloRequest {
  string name = 1;
}

//-------------------------------------- request
message EmptyParam
{}

message GrpcInt
{
  int32 Value = 1;
}

// The response message containing the greetings.
message HelloReply {
  string message = 1;
}

